--- a/PlateletActive.Core/packages.config
+++ b/PlateletActive.Core/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoClutch.AutoRepo" version="1.0.7" targetFramework="net45" />
-  <package id="AutoClutch.AutoService" version="1.1.0" targetFramework="net45" />
+  <package id="AutoClutch.AutoRepo" version="3.4" targetFramework="net45" />
+  <package id="AutoClutch.AutoService" version="3.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net45" />
+  <package id="System.Linq.Dynamic" version="1.0.4" targetFramework="net45" />
+  <package id="TrackerEnabledDbContext" version="3.3.12" targetFramework="net45" />
+  <package id="TrackerEnabledDbContext.Common" version="3.3.12" targetFramework="net45" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net45" />
 </packages>
