--- a/PlateletActive.Data/packages.config
+++ b/PlateletActive.Data/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoClutch.AutoRepo" version="3.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net45" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net45" />
+  <package id="System.Linq.Dynamic" version="1.0.4" targetFramework="net45" />
+  <package id="TrackerEnabledDbContext" version="3.3.12" targetFramework="net45" />
+  <package id="TrackerEnabledDbContext.Common" version="3.3.12" targetFramework="net45" />
 </packages>
