--- a/PlateletActive.UnitTests/App.config
+++ b/PlateletActive.UnitTests/App.config
@@ -4,19 +4,6 @@
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-  </startup>
-  <appSettings>
-    <add key="inPath" value="C:\dev\PlateletActive\PlateletActive.Infrastructure\LogFiles\In" />
-    <add key="outPath" value="C:\dev\PlateletActive\PlateletActive.Infrastructure\LogFiles\Out" />
-    <add key="minutes" value="2" />
-    <add key="clientId" value="" />
-    <add key="version" value="1.0" />
-  </appSettings>
-  <connectionStrings>
-    <add name="PlateletActiveContext" connectionString="data source=.;initial catalog=CsvParser;user id=luke;password=luke;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -27,4 +14,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup></configuration>
